[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/Wave_Function_Collapse/Plugin_controll/Mesh_preview/3D_controll.gd" type="Script" id=1]
[ext_resource path="res://addons/Wave_Function_Collapse/Plugin_controll/Mesh_preview/3D_controll.tres" type="World" id=3]
[ext_resource path="res://addons/Wave_Function_Collapse/Plugin_controll/WFC_theme.tres" type="Theme" id=4]
[ext_resource path="res://addons/Wave_Function_Collapse/Plugin_controll/DroidSans.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
size = 70
use_mipmaps = true
font_data = ExtResource( 5 )

[node name="Control" type="ViewportContainer"]
anchor_right = 0.488
anchor_bottom = 0.833
margin_right = 0.287964
margin_bottom = 0.199951
rect_min_size = Vector2( 500, 500 )
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 500, 500 )
own_world = true
world = ExtResource( 3 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( -4.37114e-08, -0.358368, 0.93358, 0, 0.93358, 0.358368, -1, 1.56648e-08, -4.08081e-08, 2, 1, 0 )
keep_aspect = 0
cull_mask = 524288
current = true
fov = 35.0
size = 3.003
near = 0.06

[node name="MeshInstance" type="MeshInstance" parent="Viewport"]
unique_name_in_owner = true
layers = 524288

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 0.32549, 1, 0.392157 )
show_behind_parent = true
margin_right = 500.0
margin_bottom = 500.0

[node name="name_label" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 25.0
margin_right = 500.0
margin_bottom = 90.0
rect_min_size = Vector2( 450, 90 )
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "OBJ NAME"
align = 1
valign = 1
clip_text = true

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
margin_left = 1.0
margin_top = 1.0
margin_right = 499.0
margin_bottom = 499.0
border_color = Color( 0.0196078, 0.368627, 0.521569, 1 )

[connection signal="gui_input" from="." to="." method="_on_Control_gui_input"]
[connection signal="gui_input" from="Panel" to="." method="_on_Panel_gui_input"]
[connection signal="gui_input" from="ReferenceRect" to="." method="_on_ReferenceRect_gui_input"]
